@@ -8,7 +8,6 @@ buildscript {
         excludeGroup "com.github.ben-manes.versions"
       }
     }
-
   }
   dependencies {
     classpath group: 'cz.habarta.typescript-generator', name: 'typescript-generator-gradle-plugin', version: '3.2.1263'
@@ -21,13 +20,13 @@ plugins {
   id 'idea'
   id 'pmd'
   id 'jacoco'
-  id 'org.owasp.dependencycheck' version '8.2.1'
-  id 'org.sonarqube' version '4.2.0.3129'
+  id 'org.owasp.dependencycheck' version '8.3.1'
+  id 'org.sonarqube' version '4.2.1.3168'
   id 'io.spring.dependency-management' version '1.1.0'
-  id 'org.springframework.boot' version '2.7.12'
-  id 'com.github.ben-manes.versions' version '0.46.0'
-  id 'hmcts.ccd.sdk' version '5.3.9'
-  id 'com.github.hmcts.rse-cft-lib' version '0.19.705'
+  id 'org.springframework.boot' version '3.1.1'
+  id 'com.github.ben-manes.versions' version '0.47.0'
+  id 'hmcts.ccd.sdk' version '5.3.10'
+  id 'com.github.hmcts.rse-cft-lib' version '0.19.740'
 }
 
 apply plugin: 'cz.habarta.typescript-generator'
@@ -57,7 +56,6 @@ sourceSets {
     }
   }
 }
-
 
 java {
   toolchain {
@@ -145,7 +143,7 @@ task highLevelDataSetup(type: JavaExec) {
 
 checkstyle {
   maxWarnings = 0
-  toolVersion = '10.12.0'
+  toolVersion = '10.12.1'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
@@ -219,7 +217,7 @@ dependencyManagement {
   dependencies {
     dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
     // CVE-2018-10237 - Unbounded memory allocation
-    dependencySet(group: 'com.google.guava', version: '32.0.0-jre') {
+    dependencySet(group: 'com.google.guava', version: '32.1.1-jre') {
       entry 'guava'
     }
   }
@@ -239,8 +237,6 @@ def versions = [
   springBoot        : springBoot.class.package.implementationVersion
 ]
 
-ext["rest-assured.version"] = '4.5.0'
-
 ext.libraries = [
   junit5: [
     "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
@@ -254,11 +250,16 @@ ext.libraries = [
 dependencies {
 // uncomment for local version
 // implementation group: 'com.github.hmcts', name: 'ccd-config-generator', version: 'DEV-SNAPSHOT'
+  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.20.0'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.20.0'
+  implementation group: 'com.google.guava', name: 'guava', version: '32.1.1-jre'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '3.1.1'
 
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.jackson
-  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.1.0'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.2.1'
   implementation (group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.11') {
     exclude group: 'org.apache.commons', module: 'commons-compress'
     exclude group: 'com.google.guava', module: 'guava'
@@ -268,26 +269,26 @@ dependencies {
   }
   implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.9.2'
   implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
-  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '2.1.1'
+  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.1'
   implementation group: 'com.github.hmcts', name: 'java-logging', version: '6.0.1'
-  implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '3.0.23'
-  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
-  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.3'
+  implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '4.0.0'
+  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.20.0'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.20.0'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.75'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.9'
-  implementation group: 'org.elasticsearch', name: 'elasticsearch'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '10.1.10'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.10'
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.1.0'
+  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.17.11'
   implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
-  implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.1'
+  implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.2'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.6'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '4.0.3'
   implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '4.1.0-RELEASE'
   implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
   implementation group: 'commons-validator', name: 'commons-validator', version: '1.7'
@@ -296,27 +297,24 @@ dependencies {
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
   testImplementation libraries.junit5
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
-    exclude group: 'junit', module: 'junit'
-    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-  }
-
   testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
     exclude(module: 'commons-logging')
     exclude(module: 'android-json')
+    exclude group: 'junit', module: 'junit'
+    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
 
   testImplementation group: 'com.jayway.awaitility', name: 'awaitility', version: '1.7.0'
   testImplementation group: 'com.github.stefanbirkner', name: 'system-lambda', version: '1.2.1'
   testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
   testImplementation group: 'org.assertj', name: 'assertj-guava', version: '3.24.2'
-  testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '3.1.7'
+  testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '4.0.3'
   testImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   testImplementation group: 'org.mockito', name: 'mockito-inline', version: '5.2.0'
   testImplementation group: 'io.github.openfeign', name: 'feign-jackson', version: '12.3'
   testImplementation group: 'io.rest-assured', name: 'rest-assured'
-  testImplementation group: 'org.simplify4u', name: 'slf4j-mock', version: '2.3.0'
-  testImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.28'
+  testImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.29'
+  testImplementation group: 'org.simplify4u', name: 'slf4j2-mock', version: '2.3.0'
 
   testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
@@ -327,12 +325,12 @@ dependencies {
   functionalTestImplementation sourceSets.test.runtimeClasspath
 
   functionalTestImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
-  functionalTestImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
-  functionalTestImplementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.2'
+  functionalTestImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.59'
+  functionalTestImplementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.1.0'
 
   // Provides fast-reload of just the NFDIV service.
   cftlibImplementation 'org.springframework.boot:spring-boot-devtools'
-  cftlibTestImplementation 'com.microsoft.playwright:playwright:1.34.0'
+  cftlibTestImplementation 'com.microsoft.playwright:playwright:1.35.1'
   cftlibTestImplementation 'org.junit-pioneer:junit-pioneer:2.0.1'
 }
 
@@ -465,6 +463,8 @@ cftlibTest {
 
 tasks.withType(Test).configureEach {
   maxParallelForks = Math.min(Runtime.runtime.availableProcessors().intdiv(2), 4) ?: 1
+  jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+           "--add-opens=java.base/java.util=ALL-UNNAMED"])
 }
 
 // exclude the logback binding is coming in via cftlib
@@ -478,6 +478,10 @@ task installChromium(type: JavaExec) {
   classpath = sourceSets.cftlibTest.runtimeClasspath
   main = 'com.microsoft.playwright.CLI'
   args = ['install', 'chromium']
+}
+
+configurations.all {
+  exclude group: 'com.vaadin.external.google', module: 'android-json'
 }
 
 tasks.cftlibTest.dependsOn(installChromium)
